add ability to register new users (backend)

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=procurementplatform.db"
-  }
+  },
+  "TokenKey": "6qfM6t9dzmc4Lwx50tWs"
 }
