--- a/.gitignore
+++ b/.gitignore
@@ -449,10 +449,11 @@ $RECYCLE.BIN/
 ##
 ## Visual Studio Code
 ##
-.vscode/*
+.vscode/
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 
-*.db
+*.db*
+
