switch to postgresql

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=procurementplatform.db"
+    "DefaultConnection": "Server=localhost; Port=5433; User Id=postgres; Password=L7XQf2yL2l; Database=procurementplatform"
   },
   "TokenKey": "6qfM6t9dzmc4Lwx50tWs"
 }
